[package]
name = "kill-them-all"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
# Enables debug infos and rendering
dev = ["dep:bevy-inspector-egui", "bevy/bevy_dev_tools"]

[dependencies]
rand = "0.9"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "default_font",
    "png"
] }
bevy_rapier2d = "0.29"
bevy_ecs_tilemap = "0.15"
bevy_ecs_ldtk = "0.11"

# feature: dev
bevy-inspector-egui = { version = "0.30", default-features = false, features = [
    "bevy_render",
], optional = true }
noise = "0.9.0"

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["webgpu"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
