[package]
name = "kill-them-all"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
# Enables debug infos and rendering
dev = ["dep:bevy-inspector-egui", "bevy/bevy_dev_tools", "bevy/bevy_ui_debug", "bevy/track_location"]

[dependencies]
rand = "0.9"
bevy = { version = "0.16", default-features = false, features = [
    "std", 
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "default_font",
    "png",
    "bevy_ui_picking_backend"
] }
bevy_rapier2d = "0.30"
bevy_ecs_tilemap = "0.16"
noise = "0.9"

# feature: dev
bevy-inspector-egui = { version="0.31", default-features = false, features = [
    "bevy_render", "documentation"
], optional = true }

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.16", default-features = false, features = ["webgpu"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
