[package]
name = "kill-them-all"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jérémie Fouché"]
description = "A 'Path Of Exile' super lite 2D game."
repository = "https://github.com/jfouche/kill-them-all"
keywords = ["game", "bevy", "2D"]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
# Enables debug infos and rendering
dev = [
    "dep:bevy-inspector-egui", 
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools", 
    "bevy/bevy_ui_debug", 
    "bevy/track_location"
]

[dependencies]
rand = "0.9"
bevy = { version = "0.16", default-features = false, features = [
    "std", 
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_audio",
    "multi_threaded",
    "default_font",
    "png",
    "bevy_ui_picking_backend"
] }
bevy_rapier2d = "0.30"
bevy_ecs_tilemap = "0.16"
noise = "0.9"
serde = { version = "1", features = ["derive"] }

# feature: dev
bevy-inspector-egui = { version="0.31", default-features = false, features = [
    "bevy_render"
], optional = true }

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.16", default-features = false, features = ["webgpu"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
